Fixed the some issues